[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/ui/new_ui_manager.gd" id="1_newuimanager"]
[ext_resource type="PackedScene" path="res://scenes/ui/MainMenu.tscn" id="2_mainmenu"]
[ext_resource type="PackedScene" path="res://scenes/ui/HUD.tscn" id="3_hud"]
[ext_resource type="PackedScene" path="res://scenes/ui/GameOver.tscn" id="4_gameover"]
[ext_resource type="PackedScene" path="res://scenes/ui/PauseMenu.tscn" id="5_pausemenu"]
[ext_resource type="PackedScene" path="res://scenes/ui/SettingsMenu.tscn" id="6_settingsmenu"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_newuimanager")

[node name="MainMenu" parent="." instance=ExtResource("2_mainmenu")]
layout_mode = 1

[node name="HUD" parent="." instance=ExtResource("3_hud")]
visible = false
layout_mode = 1

[node name="GameOver" parent="." instance=ExtResource("4_gameover")]
visible = false
layout_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("5_pausemenu")]
visible = false
layout_mode = 1

[node name="SettingsMenu" parent="." instance=ExtResource("6_settingsmenu")]
visible = false
layout_mode = 1
